--- a/configuration-management/ansible/roles/kops/tasks/install_kops.yml
+++ b/configuration-management/ansible/roles/kops/tasks/install_kops.yml
@@ -6,8 +6,23 @@
      baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
      gpgcheck: yes
      enabled: yes
+     description: kubenetes repo
      repo_gpgcheck: yes
      gpgkey: https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
+ - name: import gpg key
+   rpm_key:
+     key: "{{ item }}"
+     state: present
+   with_items:
+      - https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+      - https://packages.cloud.google.com/yum/doc/yum-key.gpg
+   register: import_key
+                                                                                                       
+ - name: Make cache
+   command: "yum -q makecache -y --disablerepo='*' --enablerepo='Kubernetes'"
+   when: import_key.changed
+
 
  - name: Install kubectl
    yum:
