change consul ansible play to check correct path for binary

--- a/configuration-management/ansible/roles/consul/tasks/install_consul.yml
+++ b/configuration-management/ansible/roles/consul/tasks/install_consul.yml
@@ -19,7 +19,7 @@
 
   - name: check file exists
     stat:
-      path: /usr/local/bin/consul
+      path: /usr/bin/consul
     register: consul
 
   - name: register path
