--- a/configuration-management/ansible/roles/consul/tasks/install_consul.yml
+++ b/configuration-management/ansible/roles/consul/tasks/install_consul.yml
@@ -29,6 +29,7 @@
       src: consul.j2
       dest: /etc/conf.d/consul.conf 
       owner: consul
+      group: root
       mode: 0640   
 
   - name: Check if consul binary exists
